--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
+  
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "build:fix": "chmod +x ./node_modules/.bin/vite && vite build"
+}
+
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.3",
