Fixed Vite config for deployment

--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "build:fix": "chmod +x ./node_modules/.bin/vite && vite build"
-}
-
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "postinstall": "chmod +x node_modules/.bin/vite"
+  },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.3",
