--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.61.1",
+    "react-onesignal": "^3.2.3",
     "react-router-dom": "^6.30.1",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^1.14.0",
